# gtnh-process-line-solver

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SPIKE-pipe-cable-textures.md  gtnh.lock.json  pyproject.toml  spike_pipe_textures.py
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: dataset-update.md
.github/workflows/: ci.yml  update-dataset.yml  update-textures.yml
data/multiblocks/: README.md  _meta.json  gregtech_machine_1000.json  gregtech_machine_1001.json
data/textures/: manifest.json
docs/: ARCHITECTURE.md  DESIGN.md  DOMAIN.md  IR.md  README.md  ROADMAP.md  TESTING.md
docs/dataset-extraction/: implementation.md  plan.md  requirements.md  texture-coverage-handoff.md  texture-resolution.md
examples/: README.md  gtnh-nitrobenzene.json  gtnh-sand.json
src/gtnh_solver/: __init__.py  cli.py  system_io.py
src/gtnh_solver/adapter/: __init__.py  _errors.py  core.py  plan.py  power.py
src/gtnh_solver/buildguide/: __init__.py  core.py
src/gtnh_solver/dataset/: __init__.py  multiblocks.py  roots.py  schema.py  voltage.py
src/gtnh_solver/ir/: __init__.py  _base.py  enums.py  geometry.py  input_ir.py  nets.py  output.py
src/gtnh_solver/placement/: __init__.py  constructive.py  search.py
src/gtnh_solver/previewer/: __init__.py  bake.py  html.py  jar.py  scene.py  textures.py
src/gtnh_solver/router/: __init__.py  _grid.py  auto.py  core.py  power.py
src/gtnh_solver/solver/: __init__.py  core.py
src/gtnh_solver/validator/: __init__.py  _geometry.py  core.py  report.py
tests/: _helpers.py  test_adapter.py  test_buildguide.py  test_cli.py  test_dataset.py  test_dataset_ci_resolve.py  test_dataset_ci_summary.py  test_dataset_multiblocks.py  test_dataset_roots.py  test_dataset_schema.py  test_ir.py  test_placement.py  test_placement_search.py  test_power.py  test_previewer.py  test_previewer_jar.py  test_previewer_textures.py  test_router.py  test_router_auto.py  test_smoke.py  test_solver.py  test_system_io.py  test_validator.py
tests/fixtures/: gtnh-nitrobenzene-v2.json
tests/fixtures/dataset_ci/: dependencies.gradle  gtnh.lock.json  manifest_2.8.4.json  new_meta.json  old_meta.json
tests/golden/: README.md
tools/: derive_small_manifest.py
tools/dataset_ci/: __init__.py  dataset_summary.py  resolve_versions.py
tools/gtnh-extractor/: README.md  build.gradle.kts  dependencies.gradle  gradle.properties
tools/gtnh-extractor/src/main/java/net/gtnhsolver/extractor/: DumpModel.java  DumperMod.java  ElementRecorder.java  ErrorCollector.java  HatchProbe.java  JsonWriter.java  RecordingProxy.java  StructureDumper.java  TextureDumper.java
tools/gtnh-extractor/src/main/resources/: mcmod.info
